# metr4202_2025_team15

./: .gitignore  ArucoDetect&Publish.py  README.md  package.xml  setup.py
config/: aruco_params.yaml  nav2_params.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/team15_bringup/share/team15_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/team15_bringup/share/team15_bringup/config/: aruco_params.yaml  slam_params.yaml
install/team15_bringup/share/team15_bringup/launch/: sim_explore.launch.py
install/team15_exploration/share/team15_exploration/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/team15_perception/share/team15_perception/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
launch/: sim_explore.launch.py
log/: latest_build
nodes/: ArucoDetect&Publish.py
redundant/: waypoint_cycler.py
team15_bringup/: package.xml  setup.cfg  setup.py
team15_bringup/config/: nav2_params.yaml
team15_bringup/launch/: sim_explore.launch.py
team15_exploration/: file_structure_diagram.txt  package.xml  setup.cfg  setup.py
team15_exploration/team15_exploration/: explore_nav.py  explore_nav2.py  explore_nav_v1.py
team15_perception/: mmal_service_16.1.yaml  package.xml  setup.cfg  setup.py
team15_perception/team15_perception/: aruco_detect_publish.py
worlds/: NoteToTeam.md
